force-app/main/default/objects/SVMXC__SLA_Detail__c/SVMXC__SLA_Detail__c.object-meta.xml
<CustomObject>
    <description>SLA Details</description>
    <label>SLA Detail</label>
    <nameField>
        <displayFormat>SLAD-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>