force-app/main/default/objects/SVMXC__SLA_Detail__c/fields/SVMXC__Business_Hours_Source__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Business_Hours_Source__c</fullName>
    <label>Business Hours Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>