force-app/main/default/objects/SVMXC__SLA_Detail__c/fields/SVMXC__Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Commitment_Type__c</fullName>
    <label>Commitment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InitialResponse</fullName>
            </value>
            <value>
                <fullName>OnsiteResponse</fullName>
            </value>
            <value>
                <fullName>Restoration</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>