force-app/main/default/objects/SVMXC__SLA_Detail__c/fields/SVMXC__Included_Or_Not__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Included_Or_Not__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included Or Not</label>
    <type>Checkbox</type>
</CustomField>