force-app/main/default/objects/SVMXC__SLA_Detail__c/fields/SVMXC__Internal_Goal__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Internal_Goal__c</fullName>
    <label>Internal Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>