force-app/main/default/objects/SVMXC__SLA_Detail__c/fields/SVMXC__Priority__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Priority__c</fullName>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>