force-app/main/default/objects/SVMXC__SLA_Detail__c/fields/SVMXC__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Name__c</fullName>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>