force-app/main/default/objects/SVMXC__SLA_Detail__c/recordTypes/SVMXC__Commitment.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Commitment</fullName>
    <active>true</active>
    <description>Commitment</description>
    <label>Commitment</label>
</RecordType>