force-app/main/default/objects/SVMXC__SLA_Detail__c/recordTypes/SVMXC__Services.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Services</fullName>
    <active>true</active>
    <description>Services</description>
    <label>Services</label>
</RecordType>